feat: add lines(String) toplevel to read path into stream